--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ReactorCppTest)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ReactorCppTest main.cpp Clock.cpp Clock.h vec2.h NeutronField.cpp NeutronField.h Neutron.h Neutron.cpp Timer.cpp Timer.h Area2d.cpp Area2d.h Moderator.cpp Moderator.h Node.h NeutronRegion.h)
+add_executable(ReactorCppTest main.cpp util/Clock.cpp util/Clock.h math/vec2.h actors/NeutronField.cpp actors/NeutronField.h actors/Neutron.h actors/Neutron.cpp util/Timer.cpp util/Timer.h math/Area2d.cpp math/Area2d.h actors/Moderator.cpp actors/Moderator.h godot/Node.h actors/NeutronRegion.h)
